# Idea-Doc-Generator

./: Cargo.toml  README.md
src/: main.rs
