[package]
name = "idea_doc_creator"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to help you quickly document your ideas using a structured template."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/extrawurst/idea_doc_creator"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
ctrlc = "3.5.1"
